--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -16,3 +16,8 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+
+MYAPP_RELEASE_STORE_FILE=gary-martin-release-key.keystore
+MYAPP_RELEASE_KEY_ALIAS=gary-martin-alias
+MYAPP_RELEASE_STORE_PASSWORD=Sonserios10
+MYAPP_RELEASE_KEY_PASSWORD=Sonserios10
