--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-native-vector-icons": "^6.4.2",
     "react-navigation": "^3.6.1",
     "react-redux": "^7.0.1",
+    "redux": "^4.0.1",
     "redux-form": "^8.1.0",
     "redux-thunk": "^2.3.0"
   },
