--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "faker": "^4.1.0",
+    "lodash": "^4.17.11",
     "react": "16.8.3",
     "react-native": "0.59.4",
     "react-native-camera": "git+https://git@github.com/react-native-community/react-native-camera.git",
