--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-native-camera": "git+https://git@github.com/react-native-community/react-native-camera.git",
     "react-native-elements": "^1.1.0",
     "react-native-gesture-handler": "^1.1.0",
+    "react-native-select-lists": "^1.0.1",
     "react-native-vector-icons": "^6.4.2",
     "react-navigation": "^3.6.1",
     "react-redux": "^7.0.1",
